fixing spacing issues caused by hidden images

--- a/hugo/themes/scrapyard/assets/css/styles.css
+++ b/hugo/themes/scrapyard/assets/css/styles.css
@@ -93,7 +93,7 @@
   left: 0;
 }
 
-.prose img + p {
+.prose img:not(.hidden-on-desktop) + p {
   margin-top: 0;
 }
 
@@ -213,7 +213,7 @@
   --flow-space: var(--space-xs);
 }
 
-.prose :is(h3 + p, h4 + p, p + p, a + p){
+.prose :is(h3 + p, h4 + p, p + p, a + p, img.hidden-on-desktop + p){
   --flow-space: var(--space-3xs-2xs);
 }
 
